fix: change parametr in style for scrollbar

--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -25,7 +25,7 @@ body {
 
 /* scrollbar for FireFox */
 * {
-  scrollbar-color: $color-white $color-dark;
+  scrollbar-color: $color-dark $color-white;
   scrollbar-width: thin;
 }
 
